j--/tests/pass/StarAssign.java
package pass;

public class StarAssign {
	public int eval(int a, int b) {
		a *= b;
		return a;
	}
}
