j--/tests/fail/StarAssign.java
package fail;

public class StarAssign {

	public static void main(String args[]) {
		System.out.println("c" *= "b");
	}

}
